[package]
name = "rust-ping"
version = "0.1.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pnet = "0.26"
pnet_macros_support = "0.26"
rand = "0.7"
